<resources>
    <string name="app_name">Baara App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="user_status">Recruter / Applicant</string>
    <string name="job_center">Job Center</string>
    <string name="notifications">Notifications</string>
    <string name="my_offers">My Offers</string>
    <string name="share_this_app">Share this app</string>
    <string name="more_options">More options</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="already_registered">Already registered ?</string>
    <string name="register_btn">Register</string>
    <string name="Function_not_active">Functionality is not active yet</string>
    <string name="password_unmatch">Password unmatch error</string>
    <string name="sign_out">Sign out</string>
    <string name="empty_email">Email is empty</string>
    <string name="empty_password">Password is empty</string>
    <string name="profil">Profil</string>
    <string name="create_offer">CREATE OFFER</string>
    <string name="job_title">Job Title</string>
    <string name="job_description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="offer_create_btn">CREATE</string>
    <string name="offer_city">City</string>
    <string name="offer_country">Country</string>
    <string name="end_date">End Date</string>
    <string name="dummy_text">Lorem ipsum</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</string>
    <string name="empty_field_error">Empty field found</string>
    <string name="job_requirements">Requirements</string>
    <string name="offer_end_date">End date</string>
</resources>
