<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/job_center"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/job_center" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/my_offers"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/my_offers" />

        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/my_offers" />

    </group>

    <item android:title="@string/more_options">
        <menu>
            <item
                android:id="@+id/share_app"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_this_app" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_keyboard_return_black_24dp"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
