<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".SignupActivity">


    <ImageView
        android:id="@+id/signup_baara_logo"
        android:layout_width="138dp"
        android:layout_height="121dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:srcCompat="@mipmap/baara_logo" />

    <TextView
        android:id="@+id/screen_title"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#003056"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/signup_username_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        android:textColorHint="#969696" />

    <EditText
        android:id="@+id/signup_passwd_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="#003056"
        android:textColorHint="#969696" />

    <EditText
        android:id="@+id/signup_passwdC_edtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#003056"
        android:ems="10"
        android:hint="@string/prompt_password_confirm"
        android:inputType="textPassword"
        android:textColor="#003056"
        android:textColorHint="#969696" />

    <Button
        android:id="@+id/signup_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_button_orange"
        android:text="@string/register_btn" />


    <TextView
        android:id="@+id/signin_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/already_registered"
        android:textColor="#003056" />


</LinearLayout>